ヘッダー前で消える

--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -91,58 +91,61 @@
     </section>
 
     <section id="watch"
-        class="md:w-4/5 w-9/10 max-w-[900px] py-40 relative flex flex-col justify-start items-center gap-16">
+        class="md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-20 relative flex flex-col justify-start items-center gap-16 scatter-zone">
         <h2 class="text-center p-4">
             <img src="./image/watch.svg" alt="観に行く">
         </h2>
         <div class="w-full flex flex-col md:flex-row justify-between items-start gap-24 md:gap-10">
             <div class="flex flex-col items-center md:items-start gap-2
-                w-full md:min-w-[350px] max-w-[360px] mx-auto">
-                <img src="./image/far_1.svg" alt="" class="fade-left">
-                <img src="./image/far_2.svg" alt="" class="fade-left">
-                <img src="./image/far_3.svg" alt="" class="fade-left">
-                <img src="./image/far_4.svg" alt="" class="fade-left">
-                <img src="./image/far_5.svg" alt="" class="fade-left">
-                <img src="./image/far_6.svg" alt="" class="fade-left">
-                <img src="./image/far_7.svg" alt="" class="fade-left">
-                <img src="./image/far_8.svg" alt="" class="fade-left">
-                <img src="./image/far_9.svg" alt="" class="fade-left">
+                w-full md:min-w-[350px] max-w-[360px] mx-auto fade-left">
+                <img src="./image/far_1.svg" alt="">
+                <img src="./image/far_2.svg" alt="">
+                <img src="./image/far_3.svg" alt="">
+                <img src="./image/far_4.svg" alt="">
+                <img src="./image/far_5.svg" alt="">
+                <img src="./image/far_6.svg" alt="">
+                <img src="./image/far_7.svg" alt="">
+                <img src="./image/far_8.svg" alt="">
+                <img src="./image/far_9.svg" alt="">
             </div>
 
-            <div class="w-full md:w-1/2 flex flex-col gap-16">
-                <div class="flex flex-col gap-3.5 fade-right">
+            <div class="w-full md:w-1/2 flex flex-col gap-16 fade-right">
+                <div class="flex flex-col gap-3.5">
                     <p class="leading-8 tracking-widest">
-                        〒457-0862<br>愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階
+                        〒457-0862
                     </p>
+                    <p class="leading-8 tracking-widest">愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階</p>
                     <div class="ml-auto">
                         <a href="https://maps.app.goo.gl/kFeDARX9hPKHB1pE9" target="_blank"
                             class="flex items-center gap-2">
                             <div
-                                class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/map_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full">
+                                class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/map_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full arraw">
                                 <p class="leading-8 tracking-widest">Google Mapで開く</p>
                             </div>
                         </a>
                     </div>
                 </div>
 
-                <section class="flex flex-col gap-3.5 fade-right">
+                <section class="flex flex-col gap-3.5">
                     <h3 class="text-xl font-bold tracking-widest">近辺からお越しの方</h3>
-                    <p class="leading-8 tracking-widest">
-                        地下鉄名城線［熱田神宮伝馬町駅］③番出口より徒歩10分<br>
-                        名鉄［豊田本町駅］改札より徒歩5分<br>
-                        市バス［内田橋バス停］より徒歩3分
-                    </p>
+                    <div>
+                        <p class="leading-8 tracking-widest">
+                            地下鉄名城線［熱田神宮伝馬町駅］③番出口より徒歩10分
+                        </p>
+                        <p class="leading-8 tracking-widest">名鉄［豊田本町駅］改札より徒歩5分<br></p>
+                        <p class="leading-8 tracking-widest">市バス［内田橋バス停］より徒歩3分</p>
+                    </div>
                 </section>
 
-                <section class="flex flex-col gap-3.5 fade-right">
+                <section class="flex flex-col gap-3.5">
                     <h3 class="text-xl font-bold tracking-widest">遠方からお越しの方</h3>
                     <p class="leading-8 tracking-widest">
-                        東京［東京駅］より約2時間<br>
-                        大阪［大阪駅］より約1時間40分
+                        東京［東京駅］より約2時間
                     </p>
+                    <p class="leading-8 tracking-widest">大阪［大阪駅］より約1時間40分</p>
                 </section>
 
-                <section class="flex flex-col gap-3.5 fade-right">
+                <section class="flex flex-col gap-3.5">
                     <h3 class="text-xl font-bold tracking-widest">お車でお越しの方</h3>
                     <p class="leading-8 tracking-widest">建物の隣にコインパーキング有</p>
                 </section>
@@ -154,14 +157,14 @@
     </section>
 
     <section id="rent"
-        class="md:w-4/5 w-9/10 max-w-[900px] py-40 relative flex flex-col justify-start items-center gap-16 overflow-hidden">
+        class="scatter-zone md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-20 relative flex flex-col justify-start items-center gap-16 overflow-hidden">
         <h2 class="text-center p-4">
             <img src="./image/rent.svg" alt="借りる">
         </h2>
         <div class="flex flex-col justify-start items-center gap-16">
-            <p class="text-center justify-start leading-8 tracking-widest fade-left">
+            <p class="text-center justify-start leading-8 tracking-widest fade-right">
                 体現帝国館は24時間ご利用いただけます。</p>
-            <section class="flex flex-col justify-start items-center gap-7 fade-left">
+            <section class="flex flex-col justify-start items-center gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
@@ -170,9 +173,9 @@
                     <li>想定用途：演劇練習／ダンス練習／音楽練習／写真撮影／美術製作 など</li>
                 </ul>
             </section>
-            <div class="flex flex-col justify-start items-center gap-7 w-full fade-left">
-                <div class="text-center justify-start text-xl font-bold tracking-widest">
-                    利用料金 </div>
+            <div class="flex flex-col justify-start items-center gap-7 w-full fade-right">
+                <h3 class="text-center justify-start text-xl font-bold tracking-widest">
+                    利用料金 </h3>
                 <table class="border-separate border-spacing-y-0 w-4/5">
                     <tbody class="flex flex-col items-start gap-2">
                         <tr class="flex gap-4 justify-between w-full">
@@ -218,7 +221,7 @@
                     </tbody>
                 </table>
             </div>
-            <section class="flex flex-col justify-start items-center gap-7 fade-left">
+            <section class="flex flex-col justify-start items-center gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み</h3>
                 <p class="justify-start leading-8 tracking-widest">
@@ -226,7 +229,7 @@
                 <div class="md:mx-[auto] ml-[auto]">
                     <a href="#" target="_blank">
                         <div
-                            class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/rent_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full">
+                            class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/rent_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full arraw">
                             <p class="justify-start leading-8 tracking-widest">
                                 レンタルを申し込む</p>
                         </div>
@@ -240,17 +243,17 @@
     </section>
 
     <section id="use"
-        class="md:w-4/5 w-9/10 max-w-[900px] py-40 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
+        class="scatter-zone md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-20 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
         <h2 class="text-center p-4">
             <img src="./image/use.svg" alt="上演/展示する">
         </h2>
         <div class="w-full max-w-[800px] flex flex-col justify-start gap-14">
-            <p class="self-stretch justify-start leading-8 tracking-widest fade-right">
-                体現帝国館は貸館営業を行っておりません。
-                <br />御利用を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。
-                <br />舞台上演に限らず、音楽イベントやワークショップ、展示等での御利用も可能です。
-                <br />度肝を抜く企画を持ち込みください。
-            </p>
+            <div class="self-stretch justify-start leading-8 tracking-widest fade-right">
+                <p>体現帝国館は貸館営業を行っておりません。</p>
+                <p>御利用を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。</p>
+                <p>舞台上演に限らず、音楽イベントやワークショップ、展示等での御利用も可能です。</p>
+                <p>度肝を抜く企画を持ち込みください。</p>
+            </div>
             <div class="flex flex-col justify-start items-center gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
@@ -286,30 +289,30 @@
                 <dl class="flex flex-col justify-start items-center gap-2.5">
                     <dt class="self-stretch justify-start leading-8 tracking-widest">
                         県外からの企画を実現しやすくする工夫として以下を行います。</dt>
-                    <dd class="text-justify justify-start leading-8 tracking-widest">
-                        -利用料金を定額ではなく共同収益方式とすることで金銭的な不安を軽減します。
-                        <br />-広報に体現帝国が協力することで集客面での不安を軽減します。
-                        <br />-24時間使用可能な環境を2週間お渡しすることで、作品制作に集中いただけます。
-                    </dd>
+                    <div class="text-justify justify-start leading-8 tracking-widest">
+                        <dd>-利用料金を定額ではなく共同収益方式とすることで金銭的な不安を軽減します。</dd>
+                        <dd>-広報に体現帝国が協力することで集客面での不安を軽減します。</dd>
+                        <dd>-24時間使用可能な環境を2週間お渡しすることで、作品制作に集中いただけます。</dd>
+                    </div>
                 </dl>
             </section>
             <section class="w-[694px] flex flex-col justify-start items-start gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     観客の皆さんへ</h3>
-                <p class="justify-start leading-8 tracking-widest">
-                    -審査を通じて、良質な作品を提供します。
-                    <br />-愛知県では観られない作品を提供します。
-                </p>
+                <div class="justify-start leading-8 tracking-widest">
+                    <p>-審査を通じて、良質な作品を提供します。</p>
+                    <p>-愛知県では観られない作品を提供します。</p>
+                </div>
             </section>
             <div class="flex flex-col justify-start items-center gap-7 fade-right">
-                <div class="text-center justify-start text-xl font-bold tracking-widest">
-                    お申し込み </div>
-                <div class="justify-start leading-8 tracking-widest">
-                    体現帝国館での上演や展示を希望される方は、以下のフォームよりお申し込みください。 </div>
+                <h3 class="text-center justify-start text-xl font-bold tracking-widest">
+                    お申し込み </h3>
+                <p class="justify-start leading-8 tracking-widest">
+                    体現帝国館での上演や展示を希望される方は、以下のフォームよりお申し込みください。 </p>
                 <div class="md:mx-[auto] ml-[auto]">
                     <a href="#" target="_blank">
                         <div
-                            class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/use_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full">
+                            class="p-[5px] pr-[14px] relative after:absolute after:left-0 after:bg-[url(image/use_arraw.svg)] after:bg-no-repeat after:bg-contain after:w-full after:h-full arraw">
                             <p class="justify-start leading-8 tracking-widest">
                                 上演・展示利用を申し込む</p>
                         </div>
@@ -323,13 +326,13 @@
     </section>
 
     <section id="about"
-        class="md:w-4/5 w-9/10 max-w-[900px] py-40 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
+        class="scatter-zone md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-20 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
         <h2 class="text-center p-4">
             <img src="./image/about.svg" alt="体現帝国館とは">
         </h2>
         <div class="w-full flex flex-col justify-start items-center gap-2.5">
-            <p class="self-stretch text-justify justify-start leading-8 tracking-widest fade-left">
-                名古屋市南区内田橋にある電気工務店の旧倉庫を2024年1月より劇団［体現帝国］が借り、＜稽古・作業・上演・打ち上げ＞演劇に関する全てが完結する専用劇場として改装を施す。2025年4月にこけら落とし公演を行い、以降は劇団の活動を最優先としながら内田橋商店街と連携し劇場運営を行う。 
+            <p class="self-stretch text-justify justify-start leading-8 tracking-widest fade-right">
+                名古屋市南区内田橋にある電気工務店の旧倉庫を2024年1月より劇団［体現帝国］が借り、＜稽古・作業・上演・打ち上げ＞演劇に関する全てが完結する専用劇場として改装を施す。2025年4月にこけら落とし公演を行い、以降は劇団の活動を最優先としながら内田橋商店街と連携し劇場運営を行う。
             </p>
         </div>
         <div class="w-full flex flex-col justify-center items-center">
@@ -355,7 +358,7 @@
     </section>
 
     <section id="document"
-        class="md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-72 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
+        class="scatter-zone md:w-4/5 w-9/10 max-w-[900px] pt-40 pb-36 relative flex flex-col justify-start items-center gap-14 overflow-hidden">
         <h2 class="text-center p-4">
             <img src="./image/document.svg" alt="各種資料">
         </h2>
@@ -630,7 +633,7 @@
         gsap.registerPlugin(ScrollTrigger);
 
         const fadeSettings = {
-            duration: 1.2,
+            duration: 1,
             ease: "power2.out",
             opacity: 0
         };
@@ -671,6 +674,55 @@
                     start: "top 85%",
                     toggleActions: "play none none none"
                 }
+            });
+        });
+
+        // ------------------------------
+        // Header overlap scatter animation
+        // ------------------------------
+        // スクロール速度に応じて散り量と消失スピードが変わる演出
+        // 各テキスト要素単位で、ヘッダーに触れる直前にのみ散らすための設定
+        const HEADER_HEIGHT = 112;            // ヘッダー実寸
+        const ENTER_PADDING = 32;             // 下方向スクロール時：少し下で発火
+        const LEAVE_PADDING = -52;            // 上方向スクロール時：かなり上で戻す
+
+        gsap.utils.toArray(".scatter-zone").forEach(section => {
+            const items = section.querySelectorAll("p, li, dt, dd, h3,img,h2,th,td,.arraw,#msgCard");
+            items.forEach(item => {
+                gsap.set(item, { willChange: "transform, opacity" });
+
+                ScrollTrigger.create({
+                    // markers: true,
+                    trigger: item,
+                    start: () => `top ${HEADER_HEIGHT + ENTER_PADDING}px`,
+                    end: () => `top ${HEADER_HEIGHT + LEAVE_PADDING}px`,
+                    onUpdate: self => {
+                        item._scrollVelocity = Math.abs(self.getVelocity());
+                    },
+                    onEnter: () => {
+                        const v = Math.min(item._scrollVelocity || 0, 2500); // 上限
+                        const power = gsap.utils.mapRange(0, 3000, 0.3, 1.2, v);
+
+                        gsap.to(item, {
+                            x: gsap.utils.random(-18, 18) * power,
+                            y: gsap.utils.random(-12, 12) * power,
+                            rotation: gsap.utils.random(-3, 3) * power,
+                            opacity: 0,
+                            duration: gsap.utils.mapRange(0, 2000, 0.3, 0, v),
+                            ease: "power3.in"
+                        });
+                    },
+                    onLeaveBack: () => {
+                        gsap.to(item, {
+                            x: 0,
+                            y: 0,
+                            rotation: 0,
+                            opacity: 1,
+                            duration: 0.3,
+                            ease: "power3.out"
+                        });
+                    }
+                });
             });
         });
     </script>
