画像、動画圧縮

--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -10,6 +10,10 @@
             scroll-behavior: smooth;
         }
 
+        body {
+            background-color: #F5F4F9;
+        }
+
         /* header active link (desktop only) */
         @media (min-width: 768px) {
             header nav a {
@@ -62,7 +66,7 @@
             class="w-[538px] max-w-4/5 h-auto left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 absolute" />
     </div>
 
-    <video autoplay muted loop src="./image/background6.mp4"
+    <video autoplay muted loop src="./image/background6.webm"
         class="fixed z-[-99] w-full h-full inset-0 object-cover"></video>
 
     <!-- Mobile scroll indicator / progress ring -->
