ファビコン、劇団リンク追加

--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./output.css">
+    <link rel="icon" href="./favicon.ico">
+
     <style>
         html {
             scroll-behavior: smooth;
@@ -149,9 +151,9 @@
         <h2 class="text-center p-4">
             <img src="./image/watch.svg" alt="観に行く">
         </h2>
-        <div class="w-full flex flex-col md:flex-row justify-between items-start gap-24 md:gap-10">
+        <div class="w-full flex flex-col md:flex-row justify-between items-start gap-24 md:gap-10 fade-right">
             <div class="flex flex-col items-center md:items-start gap-2
-                w-full md:min-w-[350px] max-w-[360px] mx-auto fade-left">
+                w-full md:min-w-[350px] max-w-[360px] mx-auto">
                 <img src="./image/far_1.svg" alt="">
                 <img src="./image/far_2.svg" alt="">
                 <img src="./image/far_3.svg" alt="">
@@ -163,7 +165,7 @@
                 <img src="./image/far_9.svg" alt="">
             </div>
 
-            <div class="w-full md:w-1/2 flex flex-col gap-16 fade-right">
+            <div class="w-full md:w-1/2 flex flex-col gap-16">
                 <div class="flex flex-col gap-3.5">
                     <p class="leading-8 tracking-widest">
                         〒457-0862
@@ -217,10 +219,10 @@
         <h2 class="text-center p-4">
             <img src="./image/rent.svg" alt="借りる">
         </h2>
-        <div class="flex flex-col justify-start items-center gap-16">
-            <p class="text-center justify-start leading-8 tracking-widest fade-right">
+        <div class="flex flex-col justify-start items-center gap-16 fade-right">
+            <p class="text-center justify-start leading-8 tracking-widest">
                 体現帝国館は24時間ご利用いただけます。</p>
-            <section class="flex flex-col justify-start items-center gap-7 fade-right">
+            <section class="flex flex-col justify-start items-center gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
@@ -229,7 +231,7 @@
                     <li>想定用途：演劇練習／ダンス練習／音楽練習／写真撮影／美術製作 など</li>
                 </ul>
             </section>
-            <div class="flex flex-col justify-start items-center gap-7 w-full fade-right">
+            <div class="flex flex-col justify-start items-center gap-7 w-full">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用料金 </h3>
                 <table class="border-separate border-spacing-y-0 w-4/5">
@@ -277,7 +279,7 @@
                     </tbody>
                 </table>
             </div>
-            <section class="flex flex-col justify-start items-center gap-7 fade-right">
+            <section class="flex flex-col justify-start items-center gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み</h3>
                 <p class="justify-start leading-8 tracking-widest">
@@ -305,14 +307,14 @@
         <h2 class="text-center p-4">
             <img src="./image/use.svg" alt="上演/展示する">
         </h2>
-        <div class="w-full max-w-[800px] flex flex-col justify-start gap-14">
-            <div class="self-stretch justify-start leading-8 tracking-widest fade-right">
+        <div class="w-full max-w-[800px] flex flex-col justify-start gap-14 fade-right">
+            <div class="self-stretch justify-start leading-8 tracking-widest">
                 <p>体現帝国館は貸館営業を行っておりません。</p>
                 <p>御利用を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。</p>
                 <p>舞台上演に限らず、音楽イベントやワークショップ、展示等での御利用も可能です。</p>
                 <p>度肝を抜く企画を持ち込みください。</p>
             </div>
-            <div class="flex flex-col justify-start items-center gap-7 fade-right">
+            <div class="flex flex-col justify-start items-center gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <dl class="w-full flex flex-col gap-6 leading-8 tracking-widest">
@@ -341,7 +343,7 @@
                     </div>
                 </dl>
             </div>
-            <section class="w-full flex flex-col justify-start items-start gap-7 fade-right">
+            <section class="w-full flex flex-col justify-start items-start gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     上演を検討する県外の方々へ</h3>
                 <dl class="flex flex-col justify-start items-center gap-2.5">
@@ -354,7 +356,7 @@
                     </div>
                 </dl>
             </section>
-            <section class="w-full flex flex-col justify-start items-start gap-7 fade-right">
+            <section class="w-full flex flex-col justify-start items-start gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     観客の皆さんへ</h3>
                 <div class="justify-start leading-8 tracking-widest">
@@ -362,7 +364,7 @@
                     <p>-愛知県では観られない作品を提供します。</p>
                 </div>
             </section>
-            <div class="flex flex-col justify-start items-center gap-7 fade-right">
+            <div class="flex flex-col justify-start items-center gap-7">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み </h3>
                 <p class="justify-start leading-8 tracking-widest">
@@ -483,6 +485,10 @@
                     <p>Mail : taigenteikoku@gmail.com</p>
                     <p>Tel : 080-6944-6915</p>
                     <p>〒457-0862<br>愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階</p>
+                    <a href="https://taigenteikoku.com/" target="_blank">
+                        <p class="underline flex flex-row gap-1 items-center">体現帝国　劇団サイト<img src="./image/link.svg"
+                                alt="" class="w-4 h-4"></p>
+                    </a>
                     <div class="inline-flex items-center gap-4 mt-2">
                         <a href="https://x.com/taigenteikoku" target="_blank">
                             <img class="w-6" src="./image/logo.svg" />
